# auth-service/src/common/helpers/responseHandlers.ts
@@ -1,10 +1,4 @@
-    export interface CustomApiResponse{
-    message: string;
-    data?: any, 
-    status_code: number;
-    }
-
-    export const successResponse =(message: string, data?: any, status_code?: number) =>{
+ export const successResponse =(message: string, data?: any, status_code?: number) =>{
     return {
         status_code: status_code ? status_code : 200,
         message,
